[package]
name = "trezoa_rbpf"
version = "0.8.2"
description = "Virtual machine and JIT compiler for eBPF programs"
authors = ["Trezoa Maintainers <maintainers@trezoa.foundation>"]
repository = "https://github.com/trezoa-labs/rbpf"
homepage = "https://trezoa.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0"
edition = "2018"

include = [
    "src/**",
    "examples/**",
    "tests/**",
    "benches/**",
    "LICENSE*",
    "Cargo.toml",
]

[dependencies]
arbitrary = { version = "1.0", optional = true, features = ["derive"] }
byteorder = "1.2"
combine = "3.8.1"
gdbstub = { version = "0.6.2", optional = true }
hash32 = "0.2.0"
log = "0.4.2"
rand = { version = "0.8.5", features = ["small_rng"]}
rustc-demangle = "0.1"
shuttle = { version = "0.7.1", optional = true }
thiserror = "1.0.26"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["jit"]
jit = ["libc", "winapi"]
fuzzer-not-safe-for-production = ["arbitrary"]
debugger = ["gdbstub"]
shuttle-test = ["dep:shuttle"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
elf = "0.0.10"
serde_json = "1"
test_utils = { path = "test_utils/" }

[[bench]]
name = "elf_loader"
harness = false

[[bench]]
name = "jit_compile"
harness = false

[[bench]]
name = "vm_execution"
harness = false

[[bench]]
name = "memory_mapping"
harness = false
